--- a/Views/Skills/EditSkillsPageView.cshtml
+++ b/Views/Skills/EditSkillsPageView.cshtml
@@ -137,6 +137,7 @@
 
             //https://www.w3schools.com/jsref/met_loc_reload.asp
             location.reload();
+            window.alert("Page has been refreshed with updated information.")
         }
     </script>
 
