--- a/Views/Jobs/_JobEntry.cshtml
+++ b/Views/Jobs/_JobEntry.cshtml
@@ -362,7 +362,7 @@
 
         var jobno = currentDateTime+jobrowid;
 
-        window.alert(`Unique Job Row ID = ${jobno} of lenght ${jobno.length}`);
+        window.alert(`Unique Job Row ID = ${jobno} of length ${jobno.length}`);
 
         //PART 01:
         //PULL DATA FOR JOB ROW PRIMARY FIELDS ==
