• Add Country field to Personal Model • Add Country dropdown list to Personal View

--- a/Views/Applicants/ResumeVM.cshtml
+++ b/Views/Applicants/ResumeVM.cshtml
@@ -128,7 +128,7 @@
                 <td>
                 </td>
                 <td>
-                    Trinidad & Tobago
+                    @Model.PersonalRecordVM.CountryName
                 </td>
 
                 <td>
