--- a/Content/Site.css
+++ b/Content/Site.css
@@ -21,6 +21,6 @@ input,
 select,
 textarea {
 
-    /* max-width: 280px; */
-    max-width: 700px;
+    /* DEFAULT: max-width: 280px; */
+    max-width: 300px;
 }
