--- a/Views/Personals/AddPersonalsPageView.cshtml
+++ b/Views/Personals/AddPersonalsPageView.cshtml
@@ -8,6 +8,8 @@
 
 -->
 
+@using RésuméBuilder.Models
+
 @model RésuméBuilder.Models.Personal
 
 
@@ -16,6 +18,13 @@
 
     //This value correlates to the ApplicantID between the Applicant and Personal Models
     var id = ViewBag.TargetID;
+
+
+
+    //Set up instance of Database Context
+    MyDbContext dbContext = new MyDbContext();
+
+
 }
 
 
@@ -25,7 +34,6 @@
 <h3>Add Personal Details for Registration ID @id</h3>
 
 <p>Use the Form Below: </p>
-
 
 
 
@@ -42,6 +50,30 @@
 
 @using (Html.BeginForm("AddPersonalsFormAction", "Personals", FormMethod.Post))
 {
+
+    //String List to hold country names
+    List <string> Country = new List <string> ();
+
+    //Get list of countries from Country DB
+    var CountryTable = dbContext.countryDB;
+
+    //Convert Country DB Table to list
+    List<Country> CountryList = CountryTable.ToList();
+
+
+    //Add each country name to Country list
+    for (int i =0; i <= CountryList.Count-1; i++)
+    {
+        var country = CountryList[i].CountryName;
+
+        Country.Add(country);
+
+    }
+
+
+
+
+
 
     <!-- APPLICANT ID: AUTOMATICALLY SET TO SPECIFIC VALUE -->
     <!-- This input field will be passed with the rest of the form data
@@ -92,6 +124,13 @@
     <div class="form-group">
         @Html.LabelFor(p => p.RegionLocation)
         @Html.TextBoxFor(p => p.RegionLocation, new { @class = "form-control" })
+    </div>
+    <br />
+
+    <!-- Country -->
+    <div class="form-group">
+        @Html.LabelFor(p => p.CountryName)
+        @Html.DropDownListFor(p => p.CountryName, new SelectList(Country, "Country Name"), "Select Country", new { @class = "form-control" })
     </div>
     <br />
 
